--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd-mobile": "^5.20.0",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.4",
     "http-proxy-middleware": "^2.0.6",
+    "immutable": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -16,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
